# d6dice

./: .gitignore  .readthedocs.yml  README.md  dice.py  mkdocs.yml  pyproject.toml
d6dice/: __main__.py  console.py  dice.py
docs/: index.md
docs/guides/: devsetup.md  examples.md  index.md  install.md
