[tool.poetry]
name = "d6dice"
version = "0.1.0"
description = "Simulated dice object"
authors = ["Chuck Mo <chuck@d6engine.org>"]
license = "GPL-3.0+"

readme = 'README.md'  

repository = "https://gitlab.com/thechuckmo/d6dice"
homepage = "https://d6engine.org"

keywords = ['dice', 'd6engine', 'opend6']

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
mkdocs = "^1.0"
mkdocs-cluster = "^0.0.9"

[tool.poetry.scripts]
d6dice = 'd6dice:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

